add light dark mode

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
             </ul>
+            <button class="theme-toggle" aria-label="Toggle dark/light mode">
+                <i class="fas fa-sun" id="theme-icon"></i>
+            </button>
         </div>
     </nav>
 
