improve project section

--- a/index.html
+++ b/index.html
@@ -103,16 +103,44 @@
             <h2>Projects</h2>
             <div class="project-grid">
                 <div class="project-card">
-                    <h3>Scalable Websocket</h3>
-                    <p>Designed a scalable WebSocket server in Go with RabbitMQ for messaging and Redis for session caching, using Nginx for load balancing. Developed a k6 test suite to simulate up to 10,000 concurrent connections.</p>
+                    <div class="project-header">
+                        <h3>Scalable Websocket</h3>
+                        <a href="https://github.com/nayeem-17/scalable-websocket" target="_blank" class="github-link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
+                    <p>Go WebSocket server with RabbitMQ/Redis, supports 10,000+ concurrent connections</p>
+                    <div class="tech-tags">
+                        <span class="tech-tag">Go</span>
+                        <span class="tech-tag">RabbitMQ</span>
+                        <span class="tech-tag">Redis</span>
+                        <span class="tech-tag">k6</span>
+                    </div>
                 </div>
                 <div class="project-card">
-                    <h3>Soul Animal</h3>
-                    <p>Implemented infrastructure as code with Terraform to manage Azure resources, reducing manual errors by 85%. Architected a secure network with isolated subnets and built an automated CI/CD pipeline using GitHub Actions.</p>
+                    <div class="project-header">
+                        <h3>Soul Animal</h3>
+                        <a href="https://github.com/nayeem-17/soul-animal" target="_blank" class="github-link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
+                    <p>IaC for Azure, reduced manual errors by 85%, zero-trust security</p>
+                    <div class="tech-tags">
+                        <span class="tech-tag">Terraform</span>
+                        <span class="tech-tag">Azure</span>
+                    </div>
                 </div>
                 <div class="project-card">
-                    <h3>POC Learning Platform</h3>
-                    <p>Architected an online learning platform using Express.js and the Serverless Framework. Developed a user progress tracking and analytics engine to provide personalized learning paths and detailed performance insights.</p>
+                    <div class="project-header">
+                        <h3>POC Learning Platform</h3>
+                        <!-- GitHub link can be added here when URL is provided -->
+                    </div>
+                    <p>Serverless microservices for scalable online learning</p>
+                    <div class="tech-tags">
+                        <span class="tech-tag">Express.js</span>
+                        <span class="tech-tag">Serverless</span>
+                        <span class="tech-tag">AWS</span>
+                    </div>
                 </div>
             </div>
         </div>
