--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#education">Education</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#resume">Resume</a></li>
                 <li><a href="#skills">Skills</a></li>
             </ul>
             <button class="theme-toggle" aria-label="Toggle dark/light mode">
@@ -141,6 +142,27 @@
                         <span class="tech-tag">Serverless</span>
                         <span class="tech-tag">AWS</span>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="resume" class="resume">
+        <div class="container">
+            <h2>Resume</h2>
+            <div class="resume-content">
+                <p class="resume-description">
+                    Download my latest resume to learn more about my professional experience, skills, and achievements in software engineering.
+                </p>
+                <div class="resume-buttons">
+                    <a href="ZN-Resume-S.pdf" target="_blank" class="resume-btn view-btn">
+                        <i class="fas fa-eye"></i>
+                        View Resume
+                    </a>
+                    <a href="ZN-Resume-S.pdf" download="Zannatul_Naim_Resume.pdf" class="resume-btn download-btn">
+                        <i class="fas fa-download"></i>
+                        Download Resume
+                    </a>
                 </div>
             </div>
         </div>
