--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Zannatul Naim | Software Engineer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
 
@@ -46,7 +47,7 @@
             <h2>Work Experience</h2>
             <div class="timeline">
                 <div class="timeline-item">
-                    <h3>Software Engineer 1</h3>
+                    <h3>Software Engineer I</h3>
                     <p><strong>Synesis IT</strong> | Dhaka, Bangladesh</p>
                     <p class="date">June 2024 - Present</p>
                     <ul>
@@ -59,7 +60,7 @@
                 <div class="timeline-item">
                     <h3>Founding Engineer</h3>
                     <p><strong>Sentien.io</strong> | Newark, Delaware, United States</p>
-                    <p class="date">Jan 2024 - July 2024</p>
+                    <p class="date">Jan 2024 - June 2024</p>
                     <ul>
                         <li>Directed and mentored a team of 5 engineers, increasing team productivity.</li>
                         <li>Leveraged Terraform for IaC, achieving a 47.5% reduction in cloud expenditures.</li>
@@ -193,6 +194,40 @@
                     <p>AWS, GCP, Microsoft Azure</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- Achievements Section -->
+    <section id="achievements" class="achievements">
+        <div class="container">
+            <h2>Extracurricular Activities and Achievements</h2>
+            <ul>
+                <li>
+                    <strong>DevOps Hackathon Organizer:</strong>
+                    Arranged DevOps hackathon with 50+ participating teams, created question sets and marking criteria, and participated in the judging process.
+                    <br>
+                    <a href="https://devops-hackathon.vercel.app/" target="_blank" rel="noopener" style="color: var(--accent-color); font-weight: 500; text-decoration: underline;">Event Details</a>
+                </li>
+                <li>
+                    <strong>DU-IIT IT-Verse 2023 (DevOps):</strong>
+                    Winner – Built tax return platform for 1,000+ users.
+                    <em>[AWS ECS, GitHub Actions, Terraform]</em>
+                    <br>
+                    <a href="https://github.com/TaxWizard-BUET-Daredevils" target="_blank" rel="noopener" style="color: var(--accent-color); font-weight: 500; text-decoration: underline;">Project Repository</a>
+                </li>
+                <li>
+                    <strong>BUET CSE Fest Hackathon 2022 (DevOps):</strong>
+                    Winner – Built vaccination registration system with zero downtime.
+                    <em>[AWS CodePipeline, Load Balancer]</em>
+                    <br>
+                </li>
+                <li>
+                    <strong>DevOps Workshop Instructor (BUET CSE Fest 2023):</strong>
+                    Led a hands-on DevOps workshop for hackathon participants, demonstrating CI/CD pipelines with GitHub Actions and Docker Compose. 
+                    <br>
+                    <a href="https://github.com/nayeem-17/devops-workshop-demo" target="_blank" rel="noopener" style="color: var(--accent-color); font-weight: 600; text-decoration: underline;">View Hands-on Material</a>
+                </li>
+            </ul>
         </div>
     </section>
 
