--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 Backend-focused software engineer with a passion for building and deploying scalable cloud-based systems (AWS, Azure). Proficient in Node.js, Flask, FastAPI, and Spring Boot. My work on the BUET Online Job Portal demonstrates my ability to deliver reliable solutions. I thrive on DevOps methodologies and have been recognized in multiple hackathons.
             </p>
             <div class="social-links">
-                <a href="https://github.com/nayeem-17" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                <a href="https://github.com/zannatul-naim-024" target="_blank"><i class="fab fa-github"></i> GitHub</a>
                 <a href="https://linkedin.com/in/zannatul-naim" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
                 <a href="mailto:mnaim1783@gmail.com"><i class="fas fa-envelope"></i> Email</a>
             </div>
@@ -107,7 +107,7 @@
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Scalable Websocket</h3>
-                        <a href="https://github.com/nayeem-17/scalable-websocket" target="_blank" class="github-link">
+                        <a href="https://github.com/zannatul-naim-024/scalable-websocket" target="_blank" class="github-link">
                             <i class="fab fa-github"></i>
                         </a>
                     </div>
@@ -122,7 +122,7 @@
                 <div class="project-card">
                     <div class="project-header">
                         <h3>Soul Animal</h3>
-                        <a href="https://github.com/nayeem-17/soul-animal" target="_blank" class="github-link">
+                        <a href="https://github.com/zannatul-naim-024/soul-animal" target="_blank" class="github-link">
                             <i class="fab fa-github"></i>
                         </a>
                     </div>
@@ -225,7 +225,7 @@
                     <strong>DevOps Workshop Instructor (BUET CSE Fest 2023):</strong>
                     Led a hands-on DevOps workshop for hackathon participants, demonstrating CI/CD pipelines with GitHub Actions and Docker Compose. 
                     <br>
-                    <a href="https://github.com/nayeem-17/devops-workshop-demo" target="_blank" rel="noopener" style="color: var(--accent-color); font-weight: 600; text-decoration: underline;">View Hands-on Material</a>
+                    <a href="https://github.com/zannatul-naim-024/devops-workshop-demo" target="_blank" rel="noopener" style="color: var(--accent-color); font-weight: 600; text-decoration: underline;">View Hands-on Material</a>
                 </li>
             </ul>
         </div>
