--- a/index.html
+++ b/index.html
@@ -47,9 +47,17 @@
             <h2>Work Experience</h2>
             <div class="timeline">
                 <div class="timeline-item">
+                    <h3>Software Engineer</h3>
+                    <p><strong>Cielara AI</strong> | Redmond, Washington, United States (Remote)</p>
+                    <p class="date">Nov 2025 - Present</p>
+                    <ul>
+                        <li>Developing digital twin technology to enable real-time monitoring, simulation, and optimization of distributed systems.</li>
+                    </ul>
+                </div>
+                <div class="timeline-item">
                     <h3>Software Engineer I</h3>
-                    <p><strong>Synesis IT</strong> | Dhaka, Bangladesh</p>
-                    <p class="date">June 2024 - Present</p>
+                    <p><strong>Synesis IT PLC</strong> | Dhaka, Bangladesh</p>
+                    <p class="date">June 2024 - Oct 2025</p>
                     <ul>
                         <li>Design and implement a real-time notification system using WebSockets, RabbitMQ, and Redis.</li>
                         <li>Develop a WebRTC monitoring system to analyze video quality and optimize performance.</li>
